# RReadify

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: bootstrap.py
app/alembic/: env.py
app/alembic/versions/: 84d29e4fe947_init.py  f77e2f56cc97_init.py
app/api/: deps.py  main.py
app/api/middlewares/: duration.py
app/api/routes/: auth.py  register.py
app/core/: config.py  security.py
app/domain/user/: entity.py  exceptions.py
app/infra/: orm.py  uow.py
app/infra/repositories/: user.py
app/models/: __init__.py  associations.py  base.py  book.py  category.py  review.py  user.py
app/schemas/: message.py  token.py  user.py
app/scripts/: prestart.sh  start.sh
app/services/: email.py
app/services/user/: auth.py  create.py  email.py  get.py  verify.py
app/templates/: verification_email.j2
