[tool.poetry]
name = "randifyapi"
version = "0.1.0"
description = ""
authors = ["SerHappy <iamserhappy@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
asyncpg = "^0.29.0"
pydantic-settings = "^2.3.4"
uvloop = "^0.19.0"
alembic = "^1.13.1"
SQLAlchemy = "^2.0.31"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.10"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
freezegun = "^1.5.1"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",
    "D104",
    "FA102",
    "ANN101",
    "A002",
    "TD003",
    "FIX002",
    "TD002",
    "RUF001",
    "RUF002",
    "D203",
    "D212",
    "ARG001",
    "PERF203",
    "ANN002",
    "D107",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D103", "D101", "D107"]
"app/alembic/*" = ["D415", "FA100", "D103", "E501", "INP001", "ERA001", "D205"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
